--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,10 @@
       crossorigin="anonymous"
     />
     <link rel="shortcut icon" href="./assets/img/4geeks.ico" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+    />
   </head>
 
   <body>
